--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ajv": "^6.5.1",
+    "ajv": "^6.6.2",
     "ally.js": "^1.4.1",
-    "gsap": "^2.0.1",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "gsap": "^2.0.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-ga": "^2.5.6",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
-    "react-transition-group": "^2.5.0"
+    "react-scripts": "^2.1.3",
+    "react-transition-group": "^2.5.2",
+    "vanilla-lazyload": "^8.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,7 +20,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "http://digitalchem.ist/digitalchemist/",
   "browserslist": [
     ">0.2%",
     "not dead",
