--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "npm": "6.8.0",
+    "node": "10.15.1"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
