--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "react-dom": "^16.7.0",
     "react-ga": "^2.5.6",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.5",
     "react-transition-group": "^2.5.2",
+    "typescript": "^3.3.3333",
     "vanilla-lazyload": "^8.17.0"
   },
   "scripts": {
@@ -29,5 +30,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
