--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,14 @@
 # testing
 /coverage
 
-
 # production
 /build
 
 # misc
+
 static.json
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
