--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,10 @@
+#Force www:
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
-RewriteCond %{HTTP:X-Forwarded-Proto} !https
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteCond ^%{HTTP_HOST}%{REQUEST_URI} [NC]
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NC]
+
+#RewriteEngine On
+#RewriteCond %{HTTP_HOST} ^digitalchem.ist [NC]
+#RewriteRule ^(.*)$ https://www.digitalchem.ist/$1 [L,R=301]
+
