--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": ".",
+  "proxy": "http://localhost:5000",
   "engines": {
     "npm": "6.8.0",
     "node": "10.15.1"
