--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.1.1",
     "react-transition-group": "^4.2.1",
     "typescript": "^3.5.3",
     "vanilla-lazyload": "^12.0.0"
@@ -32,5 +32,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "peerDependencies": {
+    "eslint": "^6.2.2"
+  }
 }
