--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ajv": "^6.12.2",
+    "ajv": "^6.12.3",
     "ally.js": "^1.4.1",
     "gsap": "^2.1.3",
     "node-sass": "^4.14.1",
@@ -11,9 +11,9 @@
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "3.4.3",
     "react-transition-group": "^4.4.1",
-    "typescript": "^3.9.2",
+    "typescript": "^3.9.7",
     "vanilla-lazyload": "^12.5.1"
   },
   "scripts": {
