chore(update): everything

--- a/client/package.json
+++ b/client/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "alchemist-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "ajv": "^6.12.6",
-    "ally.js": "^1.4.1",
-    "gsap": "^3.6.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-ga": "^2.7.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-transition-group": "^4.4.1",
-    "typescript": "^3.9.7",
-    "vanilla-lazyload": "^12.5.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "proxy": "http://localhost:5000",
-  "engines": {
-    "npm": "6.8.0",
-    "node": "10.15.1"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "peerDependencies": {
-    "eslint": "^6.2.2"
-  }
+    "name": "alchemist-app",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "ajv": "8.12.0",
+        "ally.js": "1.4.1",
+        "gsap": "3.11.5",
+        "node-sass": "8.0.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-ga": "3.3.1",
+        "react-router-dom": "6.10.0",
+        "react-transition-group": "4.4.5",
+        "typescript": "4.9.5",
+        "vanilla-lazyload": "17.8.3"
+    },
+    "devDependencies": {
+        "react-scripts": "5.0.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "GENERATE_SOURCEMAP=false react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "update:packages": "node wipe-dependencies.js && rm -rf node_modules && npm update --save-dev && npm update --save"
+    },
+    "proxy": "http://localhost:5000",
+    "engines": {
+        "npm": "9.6.3",
+        "node": "16.17.1"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
+    "peerDependencies": {
+        "eslint": "6.8.0"
+    }
 }
