--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,12 @@
         "react-dom": "18.2.0",
         "react-ga": "3.3.1",
         "react-router-dom": "6.10.0",
+        "react-scripts": "5.0.1",
         "react-transition-group": "4.4.5",
         "typescript": "4.9.5",
         "vanilla-lazyload": "17.8.3"
     },
-    "devDependencies": {
-        "react-scripts": "5.0.1"
-    },
+    
     "scripts": {
         "start": "react-scripts start",
         "build": "GENERATE_SOURCEMAP=false react-scripts build",
