--- a/client/package.json
+++ b/client/package.json
@@ -1,38 +1,45 @@
 {
-    "name": "alchemist-app",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@react-three/drei": "^10.7.7",
-        "@react-three/fiber": "^9.5.0",
-        "ajv": "^8.17.1",
-        "ally.js": "1.4.1",
-        "gsap": "^3.14.2",
-        "react": "^19.2.4",
-        "react-dom": "^19.2.4",
-        "react-router-dom": "^7.13.0",
-        "react-scripts": "5.0.1",
-        "react-transition-group": "4.4.5",
-        "three": "^0.182.0",
-        "typescript": "^4.9.5",
-        "vanilla-lazyload": "^19.1.3"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "GENERATE_SOURCEMAP=false react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject",
-        "update:packages": "node wipe-dependencies.js && rm -rf node_modules && npm update --save-dev && npm update --save"
-    },
-    "proxy": "http://localhost:5000",
-    "engines": {
-        "npm": ">=9.0.0",
-        "node": ">=18.0.0"
-    },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
-    ]
+  "name": "alchemist-app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "ajv": "^8.17.1",
+    "ally.js": "1.4.1",
+    "gsap": "^3.14.2",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-router-dom": "^7.13.0",
+    "react-transition-group": "4.4.5",
+    "three": "^0.182.0",
+    "typescript": "^4.9.5",
+    "vanilla-lazyload": "^19.1.3"
+  },
+  "scripts": {
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "update:packages": "node wipe-dependencies.js && rm -rf node_modules && npm update --save-dev && npm update --save"
+  },
+  "engines": {
+    "npm": ">=9.0.0",
+    "node": ">=18.0.0"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.0.3",
+    "vitest": "^2.1.6",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "jsdom": "^25.0.1"
+  }
 }
