--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "heroku-postbuild": "cd client/ && yarn install && yarn build"
+    "heroku-postbuild": "cd client/ && npm install && npm run build"
   },
   "repository": {
     "type": "git",
